@@ -45,15 +45,12 @@ public class PathDiff<T extends RaptorTripSchedule> {
 
   private PathDiff(RaptorPath<T> path) {
     this.path = path;
-    this.walkDuration =
-      path
-        .legStream()
-        .filter(PathLeg::isTransferLeg)
-        .mapToInt(l -> l.asTransferLeg().duration())
-        .sum();
-    this.routes.addAll(
-        path.transitLegs().map(l -> l.trip().pattern().debugInfo()).collect(Collectors.toList())
-      );
+    this.walkDuration = path
+      .legStream()
+      .filter(l -> l.isAccessLeg() || l.isTransferLeg() || l.isEgressLeg())
+      .mapToInt(PathLeg::duration)
+      .sum();
+    this.routes.addAll(path.transitLegs().map(l -> l.trip().pattern().debugInfo()).toList());
     this.stops.addAll(path.listStops());
   }
 
@@ -68,10 +65,11 @@ public class PathDiff<T extends RaptorTripSchedule> {
   ) {
     var result = diff(left, right, skipCost);
 
-    TableBuilder tbl = Table
-      .of()
+    // Walk* is access + transfer + egress time, independent of street mode - could be flex
+    // or bycycle as well.
+    TableBuilder tbl = Table.of()
       .withAlights(Center, Right, Right, Right, Right, Right, Right, Left)
-      .withHeaders("STATUS", "TX", "Duration", "Cost", "Walk", "Start", "End", "Path");
+      .withHeaders("STATUS", "TX", "Duration", "Cost", "Walk*", "Start", "End", "Path");
 
     for (DiffEntry<PathDiff<T>> e : result) {
       if (skipEquals && e.isEqual()) {
